# QCMLForge_es

./: '  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md  env.yml  environment.yml  pyproject.toml  run.sh  sbatch_ensemble.py  setup.cfg  train.py  train.sh  train_ap.sh  train_models.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
QM/: mbis.py
datasets/: compute.py  id_1.py  setup_qcfractal.py
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
docs/autosummary/: apnet_pt.multipole.rst  apnet_pt.rst  qcmlforge.qca.setup_qcarchive_qcfractal.rst
models/: ap2_test.pt  apnet2_model_1-1-2.pt  apnet2_model_10.pt  apnet2_model_11-2.pt  apnet2_model_11.pt  apnet2_model_12-2.pt  apnet2_model_12.pt  apnet2_model_13-1-1.pt  apnet2_model_14-1-1.pt  apnet2_model_15-1-1.pt  apnet2_model_6.pt  apnet2_model_7.pt  apnet2_model_8.pt  apnet2_model_9.pt
models/ap2_ensemble/: ap2_0.pt  ap2_1.pt  ap2_2.pt  ap2_3.pt  ap2_4.pt  ap2_5.pt  ap2_t1_0.pt  ap2_t1_1.pt  ap2_t1_2.pt  ap2_t2_0.pt  ap2_t2_1.pt  ap2_t2_2.pt  ap2_t2_3.pt  ap2_t2_4.pt
models/ap2_ensemble_06_30_2025/: ap2_3.pt  ap2_4.pt  ap2_t1_3.pt  ap2_t1_4.pt  ap2_t2_2.pt
models/ap2_ensemble_1/: ap2_0.pt  ap2_3.pt  ap2_4.pt  ap2_5.pt
src/apnet_pt/: util.py  (+9 more)
tests/: test_am.py  test_ap2.py  test_ap2_fused.py  test_ap3.py  test_classical_components.py  test_dapnet.py  test_drude.py  test_ensemble.py  test_mtp.py  test_pt_dataset.py  test_speed.py  tmp.txt
(+765 files in other folders)
